makes minor adjustments

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/logo-red_white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>TMM</title>
 
     <!-- Font Imports -->
     <!-- Bebas Neue -->
@@ -20,6 +20,7 @@
     <script src="https://kit.fontawesome.com/352b39eb47.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <!-- ENTRY POINT OF REACT PROJECT -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
